// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="column"
>
  <div
    class="marginBottom-2"
  >
    <div
      class="row"
    >
      <label
        class="resetLabel label"
        for="the-input"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </label>
    </div>
  </div>
  <div
    class="default"
    data-testid="inputWrapper"
  >
    <input
      aria-invalid="false"
      class="input"
      id="the-input"
      type="text"
      value=""
    >
      
    </input>
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="column"
>
  <div
    class="marginBottom-2"
  >
    <div
      class="row"
    >
      <label
        class="resetLabel label"
        for="the-input"
      >
        <span
          class="medium boldFont color"
        >
          The input
        </span>
      </label>
    </div>
  </div>
  <div
    class="error"
    data-testid="inputWrapper"
  >
    <input
      aria-invalid="true"
      class="input"
      id="the-input"
      type="text"
      value=""
    >
      
    </input>
    <div
      style="transition:opacity 100ms ease-in-out;opacity:1"
    >
      <div
        class="marginLeft-3"
      >
        <i
          aria-label="The value of this input field is invalid."
          class="iconExclamationPointCircle error size16"
        >
          
        </i>
      </div>
    </div>
  </div>
</div>
`;
